concord_macros/tests/trybuild/fail/codegen_contract/reserved_bytes_request_invalid.stderr
error: `Bytes` endpoint I/O is reserved but not supported yet
 --> tests/trybuild/fail/codegen_contract/reserved_bytes_request_invalid.rs:8:23
  |
8 |     POST Create(body: Bytes)
  |                       ^^^^^
